# bfabricPy

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  ___pytest.ini  bfabric.py  changelog.html  demo_config.yaml  faq.md  fgcz_bfabric_setExternalJobStatus_done.py  fgcz_bfabric_setResourceStatus_available.py  genindex.html  gridengine.py  index.html  login.py  mkdocs.yml  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  release.py  requirements.txt  search.html  searchindex.js  setup.py  upload_submitter_executable.py  utils.sh  wrapper_creator_scaffold.py
app_runner/: .buildinfo  .gitignore  changelog.html  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  workunit_definition.html
app_runner/_design_notes/: _app_definition.html  _input_staging.html  _scheduling.html
app_runner/_sources/: changelog.md  index.md  workunit_definition.md
app_runner/api_reference/: index.html
app_runner/architecture/: overview.html
app_runner/deploy/: build_steps.sh
app_runner/docs/: changelog.md  conf.py  index.md  inputs_staging.md  plantuml_wrapper.sh
app_runner/getting_started/: configuration.html  index.html  installation.html  quick_start.html
app_runner/resources/: index.html
app_runner/specs/: app_specification.html  input_specification.html  output_specification.html
app_runner/user_guides/: cli_reference.html  creating_an_app.html  deploying_apps.html  index.html  working_with_inputs.html  working_with_outputs.html
bfabric/: .bfabric.py.swp  __init__.py  _version.py  bfabric.py  bfabric2.py  bfabric_config.py  bfabric_legacy.py  cli_formatting.py  errors.py  gridengine.py  mkdocs.yml  pyproject.toml  slurm.py
bfabric/config/: __init__.py  bfabric_auth.py  bfabric_client_config.py  config_file.py
bfabric/deprecated_scripts/: bfabric_csv2dataset.py  bfabric_demo_register_resource.py  bfabric_feeder_importresource.py  bfabric_list_executables.py  bfabric_list_proteomics_projects.py  bfabric_read_dataset.py  bfabric_read_sample_of_order.py  bfabric_sample_graph_traversal.py  bfabric_save.py  bfabric_save_customattributes.py  bfabric_save_qcloud2_annotation.py  bfabric_save_resource.py  bfabric_save_resource_description.py  bfabric_submitter_yaml.py  fgcz_pd_rpc_client.py  fgcz_pd_wrapper.py
bfabric/docs/: changelog.md  client.md  client_server.md  conf.py  contribute.md  entities.md  experimental_data.md  good_to_know.md  index.md  make.bat  oauth-changelog.md  read_caching.md  read_entity_api.md  read_resultcontainer.md
bfabric/engine/: engine_suds.py  engine_zeep.py  response_format_suds.py
bfabric/entities/: __init__.py  application.py  dataset.py  entity.py  executable.py  external_job.py  multiplexid.py  multiplexkit.py  order.py  parameter.py  project.py  resource.py  storage.py  workunit.py
bfabric/examples/: compare_raw_xml_zeep_suds.py  compare_zeep_suds_pagination.py  compare_zeep_suds_query.py  exists_multi.py  read_paginated_single.py  save_delete.py  suds_to_listdict.py  zeep_debug.py
bfabric/experimental/: __init__.py  multi_query.py
bfabric/results/: pandas_helper.py  response_format_dict.py  result_container.py
bfabric/scripts/: .gitignore  bfabric_create_bfabricrc.py  bfabric_csv2dataset.py  bfabric_delete.py  bfabric_demo_register_resource.py  bfabric_executable_submitter_functionalTest.py  bfabric_executable_submitter_gridengine.py  bfabric_executable_submitter_slurm.py  bfabric_executable_wrappercreator.py  bfabric_feeder_importresource.py  bfabric_feeder_mascot.py  bfabric_feeder_resource_autoQC.py  bfabric_feeder_resource_mascot.py  bfabric_flask.py  bfabric_flask_sample.py  bfabric_list.py  bfabric_list_executables.py  bfabric_list_not_available_proteomics_workunits.py  bfabric_list_not_existing_storage_directories.py  bfabric_list_pending_workunits.py  bfabric_list_proteomics_projects.py  bfabric_list_workunit_parameters.py  bfabric_logthis.py  bfabric_read.py  bfabric_read_WU_createdby.py  bfabric_read_dataset.py  bfabric_read_samples_from_dataset.py  bfabric_read_samples_of_workunit.py  bfabric_sample_graph_traversal.py  bfabric_save.py  bfabric_save_csv2dataset.py  bfabric_save_customattributes.py  bfabric_save_dataset.py  bfabric_save_dataset2csv.py  bfabric_save_fasta.py  bfabric_save_importresource.py  bfabric_save_importresource_mascot.py  bfabric_save_importresource_sample.py  bfabric_save_link_to_workunit.py  bfabric_save_mascot_as_importresource.py  (+25 more)
bfabric/src/: api_errors.py  cli_formatting.py  dict_helper.py  engine_suds.py  engine_zeep.py  errors.py  iter_helper.py  math_helper.py  pagination_playground.py  paginator.py  pandas_helper.py  response_format_dict.py  response_format_suds.py  result_container.py  suds_format.py
bfabric/tests/: __test_bfabric.py  groundtruth.json  groundtruth_pages.json  test_bfabric.py  test_bfabric_executable.py  test_bfabric_functional.py  test_bfabric_read.py  test_bfabric_read_pages.py  test_bfabric_sample.py  test_bfabric_workunit.py  test_save_fasta.py
bfabric/utilities/: utilities.py
bfabric/utils/: math_helper.py  paginator.py
bfabric/wrapper_creator/: bfabric_external_job.py  bfabric_feeder.py  bfabric_submitter.py  bfabric_wrapper_creator.py  demo_config.yaml  gridengine.py  slurm.py
bfabric_app_runner/: README.md  changelog.html  objects.inv  py-modindex.html  pyproject.toml
bfabric_app_runner/architecture/: overview.html
bfabric_app_runner/deploy/: build.sh  build_steps.sh
bfabric_app_runner/doc-fragments/: 01-deploying-python.md  02-app-runner-inputs-architecture.md  03-command-python-env.md  04-app-config.md  05-app-runner-overview-20250724.md
bfabric_app_runner/docs/: changelog.md  conf.py  index.md
bfabric_app_runner/examples/: .gitignore  README.md  test_template.py
bfabric_asgi_auth/: README.md  pyproject.toml
bfabric_asgi_auth/docs/: changelog.md
bfabric_fastapi_proxy/: pyproject.toml
bfabric_rest_proxy/: README.md  pyproject.toml
bfabric_scripts/: README.md  pyproject.toml
(+1288 files in other folders)
