[project]
name = "bfabricpy_workspace"
version = "0.0.0"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["bfabric", "bfabric_scripts", "bfabric_app_runner"]

[tool.uv.sources]
bfabric = { workspace = true }
bfabric_scripts = { workspace = true }
bfabric_app_runner = { workspace = true }

[tool.pytest.ini_options]
logot_capturer = "logot.loguru.LoguruCapturer"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint.per-file-ignores]
"**/bfabric_scripts/**" = ["ALL"]
"**/wrapper_creator/**" = ["ALL"]
"**/examples/**" = ["ALL"]
"**/tests/**" = ["ALL"]
"noxfile.py" = ["ALL"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.uv]
reinstall-package = ["bfabric", "bfabric_scripts", "bfabric_app_runner"]

[tool.basedpyright]
exclude = [
    "*/tests/*",
    # TODO specific legacy code should not be handled like this in general
    "bfabric/src/bfabric/wrapper_creator/bfabric_submitter.py",
    "bfabric/src/bfabric/wrapper_creator/bfabric_wrapper_creator.py",
]
