[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app_runner"
description = "Application runner for B-Fabric apps"
version = "0.0.2"
license = { text = "GPL-3.0" }
authors = [
    {name = "Leonardo Schwarz", email = "leonardo.schwarz@fgcz.ethz.ch"},
]
requires-python = ">=3.12"
dependencies = [
    "bfabric @ git+https://github.com/fgcz/bfabricPy.git@main",
    "pydantic",
    "glom",
]

[project.scripts]
"bfabric-app-runner"="app_runner.cli.__main__:app"

[project.optional-dependencies]
doc = [
    "sphinx",
    "myst-parser",
    "autodoc_pydantic",
    "sphinx-book-theme",
    "sphinx-autobuild",
]
dev = [
    "app_runner[doc]",
    "mypy",
    "types-PyYAML",
]

[tool.uv]
reinstall-package = ["app_runner"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
indent-width = 4
