[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app_runner"
description = "Application runner for B-Fabric apps"
version = "0.0.12"
license = { text = "GPL-3.0" }
authors = [
    {name = "Leonardo Schwarz", email = "leonardo.schwarz@fgcz.ethz.ch"},
]
requires-python = ">=3.12"
dependencies = [
    "bfabric @ git+https://github.com/fgcz/bfabricPy.git@main",
    "pydantic",
    "glom",
    "mako",
]

[project.scripts]
"bfabric-app-runner"="app_runner.cli.__main__:app"
#TODO
"bfabric-app-runner-wrapper-creator"="app_runner.bfabric_app.wrapper_creator:app"
"bfabric-app-runner-submitter"="app_runner.bfabric_app.submitter:app"

[project.optional-dependencies]
doc = [
    "sphinx",
    "myst-parser",
    "autodoc_pydantic",
    "sphinx-book-theme",
    "sphinx-autobuild",
    "sphinxcontrib-plantuml",
]
dev = [
    "app_runner[doc]",
    "bfabric[dev, typing]",
    "mypy",
    "types-PyYAML",
]
test = ["pytest", "pytest-mock", "logot"]

[tool.uv]
reinstall-package = ["bfabric", "bfabric_scripts", "app_runner"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ANN", "BLE", "D103", "E", "EXE", "F", "N", "PLW", "PTH", "SIM", "TCH", "UP", "W191"]
ignore = ["ANN401"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "pydantic.validator",
    "pydantic.field_validator",
]

[tool.ruff.lint.per-file-ignores]
# This is needed because of false positives in cyclopts code
"**/app_runner/cli/**" = ["TCH001", "TCH002", "TCH003"]
"**/app_runner/specs/**" = ["TCH001", "TCH002", "TCH003"]
