[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bfabric_app_runner"
description = "Application runner for B-Fabric apps"
readme = "README.md"
version = "0.0.22"
license = { text = "GPL-3.0" }
authors = [
    {name = "Leonardo Schwarz", email = "leonardo.schwarz@fgcz.ethz.ch"},
]
requires-python = ">=3.12"
dependencies = [
    "bfabric==1.13.27",
    "cyclopts>=3.13.0",
    "pydantic",
    "glom",
    "mako",
    "pandera[polars] >= 0.24.0"
]

[tool.hatch.build.targets.sdist]
include = [
    "src/bfabric_app_runner/**/*.py",
    "src/bfabric_app_runner/py.typed",
    "src/bfabric_app_runner/resources/*.mk"
]

[project.scripts]
"bfabric-app-runner"="bfabric_app_runner.cli.__main__:app"

[project.optional-dependencies]
doc = [
    "sphinx",
    "myst-parser",
    "autodoc_pydantic",
    "sphinx-book-theme",
    "sphinx-autobuild",
    "sphinxcontrib-plantuml",
]
dev = [
    "app_runner[doc]",
    "bfabric[dev, typing]",
    "mypy",
    "types-PyYAML",
]
test = ["pytest", "pytest-mock", "logot", "pyfakefs"]

[tool.uv]
reinstall-package = ["bfabric", "bfabric_scripts", "bfabric_app_runner"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "BLE", "D103", "E", "EXE", "F", "N", "PLW", "PTH", "SIM", "TCH", "UP", "W191"]
ignore = ["ANN401"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "pydantic.validator",
    "pydantic.field_validator",
]

[tool.ruff.lint.per-file-ignores]
# This is needed because of false positives in cyclopts code
"**/bfabric_app_runner/cli/**" = ["TCH001", "TCH002", "TCH003"]
"**/bfabric_app_runner/specs/**" = ["TCH001", "TCH002", "TCH003"]
