[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bfabric_app_runner"
description = "Application runner for B-Fabric apps"
readme = "README.md"
version = "0.5.0"
license = { text = "GPL-3.0" }
authors = [
    {name = "Leonardo Schwarz", email = "leonardo.schwarz@fgcz.ethz.ch"},
]
requires-python = ">=3.12"
dependencies = [
    "bfabric>=1.16.0,<2",
    "cyclopts>=4.0,<5.0",
    "pydantic>=2.12.3,<3.0",
    "glom>=24.11,<25.0",
    "mako>=1.3.10,<2.0",
    "pandera[polars]>=0.26.0,<0.27"
]

[tool.hatch.build.targets.sdist]
include = [
    "src/bfabric_app_runner/**/*.py",
    "src/bfabric_app_runner/py.typed",
    "src/bfabric_app_runner/resources/*.mk",
    "src/bfabric_app_runner/**/*.mako",
    "src/bfabric_app_runner/**/*.bash",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
"bfabric-app-runner"="bfabric_app_runner.cli.__main__:app"

[project.optional-dependencies]
doc = [
    "sphinx>=8.0.2",
    "myst-parser>=4.0.1",
    "autodoc_pydantic>=2.2.0",
    "sphinx-book-theme>=1.1.4",
    "sphinx-autobuild>=2024.10.3",
    "sphinxcontrib-plantuml>=0.31",
]
dev = [
    "bfabric_app_runner[doc]",
    "bfabric[dev, typing]",
    "mypy>=1.18.2",
    "types-PyYAML>=6.0.12.20250915",
]
test = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "logot>=1.5.1",
    "pyfakefs>=5.10.0",
    "inline-snapshot>=0.30.0",
]

[tool.uv]
reinstall-package = ["bfabric", "bfabric_scripts", "bfabric_app_runner"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

extend-exclude = [
    "examples/template"
]

[tool.ruff.lint]
select = ["ANN", "BLE", "D103", "E", "EXE", "F", "N", "PLW", "PTH", "SIM", "TCH", "UP", "W191"]
ignore = ["ANN401"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "pydantic.validator",
    "pydantic.field_validator",
]

[tool.ruff.lint.per-file-ignores]
# This is needed because of false positives in cyclopts code
"**/bfabric_app_runner/cli/**" = ["TCH001", "TCH002", "TCH003"]
"**/bfabric_app_runner/specs/**" = ["TCH001", "TCH002", "TCH003"]
