[project]
name = "bfabric-asgi-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leonardo Schwarz", email = "leonardo.schwarz@fgcz.ethz.ch" }
]
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.10.0",
    "itsdangerous>=2.2.0,<3",
    "starlette>=0.48.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
