[project]
name = "bfabric-asgi-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leonardo Schwarz", email = "leonardo.schwarz@fgcz.ethz.ch" }
]
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.10.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project.optional-dependencies]
demo = [
    "aiosqlite>=0.21.0",
    "starlette>=0.48.0",
    "itsdangerous>=2.2.0,<3",
]
test = [
    "bfabric-asgi-auth[demo]",
    "pytest>=8.0.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.2.0",
    "pytest-bdd>=8.1.0",
    "inline-snapshot>=0.31.0",
    "coverage>=7.11.0",
    "httpx>=0.28.1",
]
