[project]
name = "bfabric-asgi-auth"
version = "0.0.0"
description = "ASGI middleware for authenticating Bfabric web applications using cookie-based sessions."
readme = "README.md"
authors = [
    { name = "Leonardo Schwarz", email = "leonardo.schwarz@fgcz.ethz.ch" }
]
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.10.0,<4",
    "bfabric>=1.13.36",
    "pydantic>=2.11,<3",
    "starlette>=0.50.0,<1"
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project.optional-dependencies]
demo = [
    "aiosqlite>=0.21.0",
    "itsdangerous>=2.2.0,<3",
    "fastapi",
]
test = [
    "bfabric-asgi-auth[demo]",
    "pytest>=8.0.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.2.0",
    "pytest-bdd>=8.1.0",
    "inline-snapshot>=0.31.0",
    "coverage>=7.11.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["bdd"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "bdd: BDD tests using pytest-bdd",
]
