[project]
name = "bfabric-fastapi-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leonardo Schwarz", email = "leonardo.schwarz@fgcz.ethz.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "bfabric",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
bfabric = { workspace = true }
