[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bfabric_scripts"
description = "Python command line scripts for the B-Fabric API"
readme = "../README.md"
version = "1.13.39"

dependencies = [
    "bfabric>=1.14.1,<1.15.0",
    "cyclopts>=4.0,<5.0",
    "Flask>=3.0.3,<4.0",
    "xmltodict>=1.0.0,<2.0.0",
]

python_requires = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "logot[pytest,loguru]>=1.3.0",
    "pyfakefs>=5.10.0",
    "inline-snapshot>=0.30.0",
    "freezegun>=1.5.5",
]
excel = [
    "fastexcel>=4.4",
]

[project.scripts]
"bfabric-cli" = "bfabric_scripts.cli.__main__:app"

# TODO scripts for feeder
"bfabric_list_not_existing_storage_directories.py" = "bfabric_scripts.bfabric_list_not_existing_storage_directories:app"
"bfabric_save_importresource_sample.py" = "bfabric_scripts.bfabric_save_importresource_sample:main"

# TODO Legacy CLI interfaces
"bfabric_list_workunit_parameters.py" = "bfabric_scripts.bfabric_list_workunit_parameters:main"
"bfabric_upload_resource.py" = "bfabric_scripts.bfabric_upload_resource:main"
"bfabric_logthis.py" = "bfabric_scripts.bfabric_logthis:main"
"bfabric_setResourceStatus_available.py" = "bfabric_scripts.bfabric_setResourceStatus_available:main"
"bfabric_setExternalJobStatus_done.py" = "bfabric_scripts.bfabric_setExternalJobStatus_done:main"
"bfabric_setWorkunitStatus_available.py" = "bfabric_scripts.bfabric_setWorkunitStatus:main_available"
"bfabric_setWorkunitStatus_processing.py" = "bfabric_scripts.bfabric_setWorkunitStatus:main_processing"
"bfabric_setWorkunitStatus_failed.py" = "bfabric_scripts.bfabric_setWorkunitStatus:main_failed"
"bfabric_read.py" = "bfabric_scripts.bfabric_read:main"
"bfabric_read_samples_of_workunit.py" = "bfabric_scripts.bfabric_read_samples_of_workunit:main"
"bfabric_read_samples_from_dataset.py" = "bfabric_scripts.bfabric_read_samples_from_dataset:main"
"bfabric_save_csv2dataset.py" = "bfabric_scripts.bfabric_save_csv2dataset:main"
"bfabric_save_dataset2csv.py" = "bfabric_scripts.bfabric_save_dataset2csv:main"
"bfabric_save_fasta.py" = "bfabric_scripts.bfabric_save_fasta:main"
"bfabric_save_link_to_workunit.py" = "bfabric_scripts.bfabric_save_link_to_workunit:main"
#bfabric_save_resource="bfabric_scripts.bfabric_save_resource:main"
"bfabric_save_workunit_attribute.py" = "bfabric_scripts.bfabric_save_workunit_attribute:main"
"bfabric_save_workflowstep.py" = "bfabric_scripts.bfabric_save_workflowstep:main"
"bfabric_slurm_queue_status.py" = "bfabric_scripts.bfabric_slurm_queue_status:main"
"bfabric_save_resource_description.py" = "bfabric_scripts.bfabric_save_resource_description:main"
